<resources>
    <string name="app_name">namebattler</string>
    <string name="top_screen_title_print_text">ネームバトラー</string>
    <string name="top_battle_start">バトル開始</string>
    <string name="top_character_list">キャラ一覧</string>
    <string name="character_list_chara_list_print_text">キャラ一覧</string>
    <string name="party_organization_back_print_button">戻る</string>
    <string name="character_list_new_create_print_button">新しく作成する</string>
    <string name="text_battle_start">バトル開始</string>
    <string name="start_this_party">このパーティで開始(3/3)</string>
    <string name="party_organization_party_organization_print_text">パーティ編成</string>
    <string name="party_organization_this_party_start_print_button">このパーティで開始  (0/3)</string>
    <string name="title_activity_battle_start">BattleStartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="battle_start_print_text">バトル開始</string>
    <string name="battle_start_this_enemy_battle_print_button">この相手と戦う</string>
    <string name="battle_start_re_select_enemy_print_button">相手を選び直す</string>
    <string name="battle_start_vs_print_text">V S</string>
    <string name="character_detail_character_detail_print_text_id">キャラ詳細</string>
    <string name="character_detail_buck_print_button">戻る</string>
    <string name="character_detail_delete_print_button">削除する</string>
    <string name="character_creation_create_character_print_text">キャラ作成</string>
    <string name="character_creation_create_character_back_print_button">戻る</string>
    <string name="character_creation_create_character_print_button">作成する</string>
    <string name="character_creation_print_name_input_print_text">名前を入力してください</string>
    <string name="character_creation_occupation_selection_print_text">職業を選択してください</string>
    <string name="character_creation_occupation_selection_print_radioButton01">戦士</string>
    <string name="character_creation_occupation_selection_print_radioButton02">魔法使い</string>
    <string name="character_creation_occupation_selection_print_radioButton03">僧侶</string>
    <string name="character_creation_occupation_selection_print_radioButton04">忍者</string>
    <string name="character_created_create_character_print_text">キャラ作成</string>
    <string name="character_created_character_back_print__button">戻る</string>
    <string name="character_created_character_status_print_text">ステータス</string>
    <string name="character_created_character_end_creation_print_text">作成を終了する</string>
    <string name="character_created_character_Continuously_character_print_text">続けて作成する</string>
    <string name="top_screen_character_list_print_button">キャラ一覧</string>
    <string name="top_screen_battle_start_print_button">バトル開始</string>
    <string name="dialog_title">注意</string>
    <string name="dialog_message">登録できるキャラクターの上限です</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="battle_main_battle_print_text">バトル</string>
    <string name="battle_main_next_turn_print_button">次のターン</string>
    <string name="battle_main_strategy_change_print_button">変更</string>
    <string name="battle_result_battle_result_print_text">バトル結果</string>
    <string name="battle_result_challenge_again_print_button">再挑戦</string>
    <string name="battle_result_next_battle_print_button">次の対戦へ</string>
    <string name="battle_result_end_battle_print_button">対戦を終了する</string>
    <string name="strategy_change_strategy_print_text">作戦</string>おう
    <string name="strategy_change_determination_print_button">決定</string>
    <string name="strategy_change_strategy_choice_print_text">パーティーの作戦を選んでください</string>
    <string name="battle_main_print_strategy_text">作戦：</string>
    <string name="strategy_change_strategy01_name_print_text">武器でたたかおう</string>
    <string name="strategy_change_strategy02_name_print_text">攻撃魔法をつかおう</string>
    <string name="strategy_change_strategy03_name_print_text">スキルをつかおう</string>
    <string name="strategy_change_strategy04_name_print_text">回復魔法をつかおう</string>
    <string name="strategy_change_strategy05_name_print_text">薬草をつかおう</string>
    <string name="toast_layout_str_print_text"> STR:</string>
    <string name="toast_layout_def_print_text"> DEF:</string>
    <string name="toast_layout_agi_print_text"> AGI:</string>
    <string name="toast_layout_luck_print_text_id"> LUCK:</string>
    <string name="character_created_hp_print_text">HP</string>
    <string name="character_created_mp_print_text">MP</string>
    <string name="character_created_str_print_text">STR</string>
    <string name="character_created_def_print_text">DEF</string>
    <string name="character_created_agi_print_text">AGI</string>
    <string name="character_created_luck_print_text">LUCK</string>
    <string name="character_detail_status_print_text">ステータス</string>
    <string name="character_detail_mp_print_text">MP</string>
    <string name="character_detail_str_print_text">STR</string>
    <string name="character_detail_hp_print_text">HP</string>
    <string name="character_detail_def_print_text">DEF</string>
    <string name="character_detail_agi_print_text">AGI</string>
    <string name="character_detail_luck_print_text">LUCK</string>
    <string name="character_creation_name_input_hint">名前は最大10文字です</string>

</resources>