<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:splitMotionEvents="false"
    tools:context=".view.view.activity.CharacterCreationActivity">

    <TextView
        android:id="@+id/character_creation_create_character_print_text_id"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/frame_line_03"
        android:gravity="center"
        android:text="@string/character_creation_create_character_print_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/character_creation_print_name_input_print_text_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/character_creation_create_character_back_button_id"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_line_02"
        android:text="@string/character_creation_create_character_back_print_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/character_creation_create_character_print_text_id" />

    <TextView
        android:id="@+id/character_creation_print_name_input_print_text_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/character_creation_print_name_input_print_text"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/character_creation_name_input_field_editText_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_creation_create_character_print_text_id" />

    <EditText
        android:id="@+id/character_creation_name_input_field_editText_id"
        android:hint="@string/character_creation_name_input_hint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/circle_angle_quadrangle_02"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:maxLength="10"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/character_creation_occupation_selection_print_text_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_creation_print_name_input_print_text_id" />

    <TextView
        android:id="@+id/character_creation_occupation_selection_print_text_id"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:text="@string/character_creation_occupation_selection_print_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/character_creation_character_select_radioGroup_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_creation_name_input_field_editText_id"
        tools:ignore="DuplicateIds" />

    <RadioGroup
        android:id="@+id/character_creation_character_select_radioGroup_id"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_creation_occupation_selection_print_text_id">

        <RadioButton
            android:id="@+id/character_creation_occupation_selection_radioButton01_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:buttonTint="@color/colorBlack"
            android:checked="true"
            android:text="@string/character_creation_occupation_selection_print_radioButton01"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/character_creation_occupation_selection_radioButton02_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:buttonTint="@color/colorBlack"
            android:text="@string/character_creation_occupation_selection_print_radioButton02"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/character_creation_occupation_selection_radioButton03_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:buttonTint="@color/colorBlack"
            android:text="@string/character_creation_occupation_selection_print_radioButton03"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/character_creation_occupation_selection_radioButton04"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:buttonTint="@color/colorBlack"
            android:text="@string/character_creation_occupation_selection_print_radioButton04"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />
    </RadioGroup>

    <Button
        android:id="@+id/character_creation_create_character_button_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_angle_quadrangle_01"
        android:text="@string/character_creation_create_character_print_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_creation_character_select_radioGroup_id" />

</androidx.constraintlayout.widget.ConstraintLayout>