<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:splitMotionEvents="false"
    tools:context=".view.view.activity.StrategyChangeActivity">

    // 作戦の表示
    <TextView
        android:id="@+id/strategy_change_strategy_text_id"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/frame_line_03"
        android:gravity="center"
        android:text="@string/strategy_change_strategy_print_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    // 決定のボタン
    <Button
        android:id="@+id/strategy_change_determination_button_id"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/frame_line_02"
        android:text="@string/strategy_change_determination_print_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/strategy_change_strategy_text_id"
        app:layout_constraintTop_toTopOf="@+id/strategy_change_strategy_text_id" />

    <TextView
        android:id="@+id/strategy_change_strategy_choice_text_id"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/strategy_change_strategy_choice_print_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strategy_change_strategy_text_id" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="480dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:splitMotionEvents="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strategy_change_strategy_choice_text_id">

        <RadioGroup
            android:id="@+id/strategy_change_strategy_radioGroup_id"
            android:layout_width="30dp"
            android:layout_height="300dp">

            <TextView
                android:id="@+id/strategy_change_padding_gap_text01_id"
                android:layout_width="30dp"
                android:layout_height="15dp" />

            <RadioButton
                android:id="@+id/strategy_change_strategy01_radioButton_id"
                style="@style/MyRadioButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/selector_radio_button_custom"
                android:checked="true" />

            <TextView
                android:id="@+id/strategy_change_padding_gap_text02_id"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <RadioButton
                android:id="@+id/strategy_change_strategy02_radioButton_id"
                style="@style/MyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/selector_radio_button_custom" />

            <TextView
                android:id="@+id/strategy_change_padding_gap_text03_id"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <RadioButton
                android:id="@+id/strategy_change_strategy03_radioButton_id"
                style="@style/MyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/selector_radio_button_custom" />

            <TextView
                android:id="@+id/strategy_change_padding_gap_text04_id"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <RadioButton
                android:id="@+id/strategy_change_strategy04_radioButton_id"
                style="@style/MyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/selector_radio_button_custom" />

            <TextView
                android:id="@+id/strategy_change_padding_gap_text05_id"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <RadioButton
                android:id="@+id/strategy_change_strategy05_radioButton_id"
                style="@style/MyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/selector_radio_button_custom" />

            <TextView
                android:id="@+id/strategy_change_padding_gap_text06_id"
                android:layout_width="30dp"
                android:layout_height="15dp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:splitMotionEvents="false">

            <TextView
                android:id="@+id/strategy_change_strategy01_name_text_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:buttonTint="@color/colorBlue"
                android:gravity="left|center"
                android:text="@string/strategy_change_strategy01_name_print_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/strategy_change_strategy02_name_text_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:buttonTint="@color/colorBlue"
                android:gravity="left|center"
                android:text="@string/strategy_change_strategy02_name_print_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/strategy_change_strategy03_name_text_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:buttonTint="@color/colorBlue"
                android:gravity="left|center"
                android:text="@string/strategy_change_strategy03_name_print_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/strategy_change_strategy04_name_text_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:buttonTint="@color/colorBlue"
                android:gravity="left|center"
                android:text="@string/strategy_change_strategy04_name_print_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/strategy_change_strategy05_name_text_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:buttonTint="@color/colorBlue"
                android:gravity="left|center"
                android:text="@string/strategy_change_strategy05_name_print_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>